--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hacker Times</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- NEWSPAPER CONTAINER -->
@@ -12,13 +13,13 @@
     <!-- header -->
     <header>
       <div class="date">JANUARY 1, 1970</div>
-      <h1>The Hacker Times</h1>
+     <h1>The Hacker Times</h1>
     </header>
     <!-- navigation -->
-    <nav>
-      <ul>
-        <li><a href="#">HTML & CSS</a></li>
-        <li><a href="#">UX & UI</a></li>
+    <nav class="nav">
+      <ul >
+        <li class="HTML"><a href="#">HTML&CSS</a></li>
+        <li class="UX"><a href="#">UX&UI</a></li>
         <li><a href="#">JAVASCRIPT</a></li>
         <li><a href="#">EXPRESS</a></li>
         <li><a href="#">MONGODB</a></li>
@@ -30,24 +31,30 @@
     <!-- front page article -->
     <main>
       <h2>Have You Tried Turning It On and Off Again?</h2>
-      <h5>By Maurice Moss</h5>
+      <h5 id="h5">By Maurice Moss</h5>
       <img src="assets/front-page-article.png" alt="placeholder">
-      <p>
-        Cupcake ipsum dolor sit amet. Candy gummies jelly-o pie toffee cheesecake pastry cake. Soufflé sesame snaps tootsie roll jelly-o soufflé tart gummies. Dessert lollipop halvah brownie chocolate bar gingerbread. Lollipop chocolate bar dragée jelly-o cookie tiramisu icing. Dragée muffin marshmallow jelly beans jelly beans. Tootsie roll pie cheesecake. Brownie biscuit gingerbread cupcake sweet roll sweet jelly-o cookie pie. Lemon drops topping lemon drops jelly beans toffee. Tiramisu cotton candy pie toffee cake chocolate cake apple pie. Cupcake bear claw donut apple pie halvah sesame snaps macaroon tootsie roll
+      <p class="body">
+        Cupcake ipsum dolor sit amet. Candy gummies jelly-o pie toffee cheesecake pastry cake. Soufflé sesame snaps <br> tootsie roll jelly-o soufflé tart gummies. Dessert lollipop halvah brownie chocolate bar gingerbread. Lollipop <br> chocolate bar dragée jelly-o cookie tiramisu icing. Dragée muffin marshmallow jelly beans jelly beans. Tootsie roll <br> pie cheesecake. Brownie biscuit gingerbread cupcake sweet roll sweet jelly-o cookie pie. Lemon drops topping <br>lemon drops jelly beans toffee. Tiramisu cotton candy pie toffee cake chocolate cake apple pie. Cupcake bear <br> claw donut apple pie halvah sesame snaps macaroon tootsie roll
         </p>
     </main>
     <!-- more articles -->
     <div class="more-articles">
+      <div class="container">
       <section>
         <h4>Tabs vs. Spaces</h4>
         <img src="assets/article-one.png" alt="placeholder">
-        <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
+        <p class="body">Lemon drops tiramisu sesame snaps oat cake <br>
+          marshmallow sugar plum liquorice. Tootsie roll <br> pastry cake gummi bears pastry toffee tootsie <br>
+          roll candy. Pastry sesame snaps wafer liquorice. <br>
+          Gummies macaroon tiramisu jelly beans soufflé <br>
+          brownie ...</p>
       </section>
       <section>
-        <h4>How Much Caffeine Is Too Much?</h4>
-        <img src="assets/article-two.png" alt="placeholder">
-        <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
+        <h4 class="cup">How Much Caffeine Is Too Much?</h4>
+        <img src="assets/article-two.png" alt="placeholder" class="tea">
+        <p class="body">Lemon drops tiramisu sesame snaps oat cake <br> marshmallow sugar plum liquorice. Tootsie roll <br> pastry cake gummi bears pastry toffee tootsie <br> roll candy. Pastry sesame snaps wafer liquorice. <br> Gummies macaroon tiramisu jelly beans soufflé <br> brownie ...</p>
       </section>
+    </div>
     </div>
   </div>
 </body>
